--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
     "react": "^15.2.1",
     "react-dom": "^15.2.1",
     "react-router": "^2.6.0",
+    "reactstrap": "^3.9.0",
+    "react-addons-css-transition-group": "^15.3.2",
+    "react-addons-transition-group": "^15.3.2",
     "webpack": "^1.13.1",
     "webpack-dev-server": "^1.14.1"
   },
